--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,17 +2,34 @@
 
 
 body {
+
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111;
 }
 
 .row_poster {
+
     width: 100%;
     object-fit: contain;
-    max-height: 100px;
+    max-height: 180px;
     margin-right: 10px;
     transition: transform 450ms;
+    user-select: none;
+
 }
+
+.row_poster:hover {
+    transform: scale(1.08);
+}
+
+.row_posterLarge {
+    max-height: 300px;
+}
+
+.row_posterLarge:hover {
+    transform: scale(1.09);
+}
+
 
 .row_posters {
     display: flex;
@@ -21,25 +38,16 @@ body {
     padding: 50px;
 }
 
-.row_poster:hover {
-    transform: scale(1.08);
-}
-
+/* removing scroll bar */
 .row_posters::-webkit-scrollbar {
     display: none;
-}
-
-.row_posterLarge {
-    max-height: 250px;
-}
-
-.row_posterLarge:hover {
-    transform: scale(1.09);
 }
 
 .row {
     color: white;
     margin-left: 20px;
+    user-select: none;
+
 }
 
 .banner {
@@ -50,6 +58,8 @@ body {
     object-fit: contain;
     height: 400px;
     margin-top: 8px;
+    user-select: none;
+
 }
 
 .banner_contents {
@@ -64,14 +74,14 @@ body {
     padding-bottom: 0.3rem;
 }
 
-.banner_description {
+/* .banner_description {
     width: 45rem;
     line-height: 1.3;
     padding-top: 1rem;
     font-size: 0.8rem;
     max-width: 360px;
     height: 100px;
-}
+} */
 
 .banner_button {
     cursor: pointer;
@@ -87,6 +97,8 @@ body {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     background-color: rgba(51, 51, 51, 0.5);
+    user-select: none;
+
 }
 
 .banner_button:hover {
@@ -99,9 +111,13 @@ body {
     margin-top: 145px;
     height: 7.4rem;
     background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+    user-select: none;
+
 }
 
 .nav {
+    user-select: none;
+
     padding-bottom: 15px;
     padding-top: 15px;
 }
@@ -110,6 +126,8 @@ body {
     width: 150px;
     object-fit: contain;
     margin-left: 0%;
+    user-select: none;
+
 }
 
 
@@ -120,10 +138,16 @@ body {
 .dropdown {
     object-fit: contain;
     margin-left: 500px;
+    user-select: none;
+
 }
 
 .signin:hover {
     color: #000;
     background-color: #867e7e;
     transition: all 0.2s;
+}
+
+.Book_Now_Button {
+    width: 100px;
 }
