--- a/CSS/SeatBooking.css
+++ b/CSS/SeatBooking.css
@@ -60,7 +60,7 @@ body {
 }
 
 .seat.selected {
-    background-color: yellow;
+    background-color: mediumvioletred;
 }
 
 .seat.occupied {
@@ -77,6 +77,7 @@ body {
 
 .seat:not(.occupied):hover {
     cursor: pointer;
+    background-color: mediumvioletred;
     transform: scale(1.2);
 }
 
@@ -116,11 +117,12 @@ body {
     background-color: #fff;
     color: black;
     text-align: center;
-    font-family: cursive;
+    font-family: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif;
+    user-select: none;
     font-weight: bolder;
     font-size: xx-large;
     padding-top: 20px;
-    height: 100px;
+    height: 120px;
     width: 130%;
     margin: 20px;
     margin-left: -50px;
@@ -159,6 +161,18 @@ body {
     font-size: 1em;
     font-weight: 600;
     cursor: pointer;
+
+}
+
+.btn-paynow {
+    background-color: #21bbac;
+    border: 1px solid #000000;
+    padding: .6em 2em;
+    border-radius: 10px;
+    font-size: 1em;
+    font-weight: 600;
+    cursor: pointer;
+
 }
 
 
