--- a/CSS/SeatBooking.css
+++ b/CSS/SeatBooking.css
@@ -25,22 +25,6 @@ body {
     margin: 0;
 }
 
-/* .movie-container {
-    margin: 20px 0;
-} */
-
-/* .movie-container select {
-    background-color: #fff;
-    border: 0;
-    border-radius: 5px;
-    font-size: 14px;
-    margin-left: 10px;
-    padding: 5px 15px 5px 15px;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-} */
-
 .container {
     perspective: 1000px;
     margin-bottom: 30px;
@@ -104,17 +88,18 @@ body {
     margin: 0 10px;
 }
 
-/* .showcase li small {
+.showcase li small {
     margin-left: 2px;
-} */
+}
 
 .row {
     display: flex;
     margin-left: 200px;
 }
 
+/* Theater Screen */
 .screen {
-    background-color: #fff;
+    background-color: thistle;
     color: black;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif;
@@ -126,32 +111,14 @@ body {
     width: 130%;
     margin: 20px;
     margin-left: -50px;
-    transform: rotateX(-45deg);
+    transform: rotateX(-30deg);
     box-shadow: 0 3px 10px rgba(255, 255, 255, 5.0);
 }
 
-/* p.text {
-    margin: 5px 0;
-} */
-
-/* p.text span {
-    color: #6feaf6;
-} */
-
-/* body{
-        transform: scale(1.4);
-      } */
-
-
+/*Font Color Of N/A , Selected, Occupied*/
 .status {
     color: white;
 }
-
-/* .nav-link {
-    color: white !important;
-    font-weight: 500 !important;
-} */
-
 
 .btn-home {
     background-color: #21bbac;
@@ -161,7 +128,7 @@ body {
     font-size: 1em;
     font-weight: 600;
     cursor: pointer;
-
+    margin-left: -190px;
 }
 
 .btn-paynow {
@@ -172,10 +139,5 @@ body {
     font-size: 1em;
     font-weight: 600;
     cursor: pointer;
-
-}
-
-
-.btn-home:active {
-    border: 0px solid #E50914;
+    margin-left: -30px;
 }
