updation in admin page

--- a/CSS/adminPage.css
+++ b/CSS/adminPage.css
@@ -19,3 +19,42 @@ body {
     float: right;
     margin-right: 1rem;
 }
+
+
+.modal-content {
+ 
+    /* 80% of window height */
+
+    max-height: 900px;
+ 
+ 
+}     
+ 
+.modal-header {
+ 
+
+ 
+    padding:16px 16px;
+ 
+    
+ 
+ }
+ .modal-body{
+    padding:30px 16px
+ }
+ .modal-footer{
+    padding:5px 10px;
+ }
+
+#imageInputModal{
+   
+}
+#imagePreview{
+    height: 200px;
+  width: 40%;
+}
+/* .modal-cancel-btn{
+    margin: 0;
+    position: absolute;
+    top: 90%;
+} */
