Folder Position Change

--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -28,13 +28,13 @@
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">User Name</label>
-                                        <input type="text" name="uname" class="form-control form-control-lg" />
+                                        <input type="text" name="uname" required class="form-control form-control-lg" />
 
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example4cg">Password</label>
-                                        <input type="password" name="pass" class="form-control form-control-lg" />
+                                        <input type="password" name="pass" required class="form-control form-control-lg" />
                                     </div>
 <!-- 
                                     <div class="form-check d-flex justify-content-center mb-5">
