--- a/Backend/templates/registration.html
+++ b/Backend/templates/registration.html
@@ -27,25 +27,25 @@
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">USER ID</label>
-                                        <input type="text" name="id" id="ID" class="form-control form-control-lg" />
+                                        <input type="text" name="id" required id="ID" class="form-control form-control-lg" />
                                     </div>
 
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">Your Name</label>
-                                        <input type="text" name="name" id="uname"
+                                        <input type="text" name="name" required id="uname"
                                             class="form-control form-control-lg" />
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example3cg">Your Email</label>
-                                        <input type="email" name="email" id="email"
+                                        <input type="email" name="email" required id="email"
                                             class="form-control form-control-lg" />
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example4cg">Password</label>
-                                        <input type="password" name="pass" id="pass"
+                                        <input type="password" name="pass" required id="pass"
                                             class="form-control form-control-lg" />
                                     </div>
 
