--- a/CSS/adminPage.css
+++ b/CSS/adminPage.css
@@ -1,27 +1,13 @@
-body {
+@media screen {
+    body {
 
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: grey;
+        background-image: url("../Images/thor5.png");
+        /* background-repeat:no-repeat; */
+        background-size: cover;
+    }
 }
-
-.main-text {
-    font-family: cursive;
-    font-weight: 900;
-    font-size: 45px;
-    color: white;
-
-    opacity: 65%;
-    margin-left: 50px;
-    user-select: none;
-
-}
-
-.signin {
-    display: flex;
-    float: right;
-    margin-right: 1rem;
-}
-
 
 .modal-content {
 
@@ -63,8 +49,37 @@ body {
     color: aliceblue;
 }
 #movieModal{
-    padding-top: 90px;
+    padding-top: 100px;
 }
 #closebtn{
     background-color: red;
+}
+
+    
+#heading{
+    color: aliceblue;
+    margin-left: 20px;
+    margin-top: 5px;
+
+}
+
+@media(min-width: 900px){
+    
+.navbar-nav{
+    margin-left: 300px;
+    
+}
+}
+
+@media screen {
+    #navbarDropdownMenuLink{
+        margin-left: 30px;
+        font-size: 20px;
+    }
+}
+@media screen {
+    #homeBtn{
+        margin-left: 30px;
+        font-size: 20px;
+    }
 }
