--- a/Backend/templates/SeatBooking.html
+++ b/Backend/templates/SeatBooking.html
@@ -119,7 +119,8 @@
     </div>
 
     <!-- <p class="text" style="font-size: 1em;margin:0px 0px 15px 0px">
-        You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
+        You have selected <span id="count">0</span> s
+        eats for a price of $<span id="total">0</span>
     </p> -->
 
     <div class="row">
