--- a/Backend/templates/adminregistration.html
+++ b/Backend/templates/adminregistration.html
@@ -21,9 +21,9 @@
                     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                         <div class="card" style="border-radius: 15px;">
                             <div class="card-body p-5 Register">
-                                <h2 class="text-uppercase text-center mb-5 text">User Registration</h2>
+                                <h2 class="text-uppercase text-center mb-5 text">Admin Registration</h2>
 
-                                <form action="/registration" method="POST">
+                                <form action="/adminregistration" method="POST">
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">USER ID</label>
