--- a/Backend/templates/rec_movie_6.html
+++ b/Backend/templates/rec_movie_6.html
@@ -24,7 +24,7 @@
         <div class="innerdiv2">
             <!-- <img src="/Images/img2.jpg" alt="" class="row_poster row_posterLarge displayimg"> -->
             <div id="movieName">Alien</div>
-            <a href="/BookNow"><button type="button" class="btn btn-danger me-md-2 booknow">
+            <a href="/BookNowNew"><button type="button" class="btn btn-danger me-md-2 booknow">
                     Book Now</button></a>
         </div>
     </div>
