--- a/Backend/templates/SeatSelecting.html
+++ b/Backend/templates/SeatSelecting.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=dd1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Modal</title>
-    <link href="/CSS/SeatSelecting.css" rel="stylesheet">
-    <script defer src="/JS/SeatSelecting.js"></script>
+    <!-- <link href="../static/CSS/SeatSelecting.css" rel="stylesheet">
+    <script defer src="../static/JS/SeatSelecting.js"></script> -->
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/SeatSelecting.css') }}">
+
+
 </head>
 
 <body>
@@ -18,28 +22,39 @@
             <button data-close-button class="close-button">&times;</button>
         </div>
         <div class="modal-body">
-           
 
-                 <button class="list-buttons" onclick="selected_seats('seat_1')" id="seat_1" style='margin-right:18px'>1</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_2')" id="seat_2" style='margin-right:18px'>2</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_3')" id="seat_3" style='margin-right:18px'>3</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_4')" id="seat_4" style='margin-right:18px'>4</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_5')" id="seat_5" style='margin-right:18px'>5</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_6')" id="seat_6" style='margin-right:18px'>6</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_7')" id="seat_7" style='margin-right:18px'>7</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_8')" id="seat_8" style='margin-right:18px'>8</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_9')" id="seat_9" style='margin-right:18px'>9</button> 
-                 <button class="list-buttons" onclick="selected_seats('seat_10')" id="seat_10" style='margin-right:18px'>10</button> 
-          
+
+            <button class="list-buttons" onclick="selected_seats('seat_1')" id="seat_1"
+                style='margin-right:18px'>1</button>
+            <button class="list-buttons" onclick="selected_seats('seat_2')" id="seat_2"
+                style='margin-right:18px'>2</button>
+            <button class="list-buttons" onclick="selected_seats('seat_3')" id="seat_3"
+                style='margin-right:18px'>3</button>
+            <button class="list-buttons" onclick="selected_seats('seat_4')" id="seat_4"
+                style='margin-right:18px'>4</button>
+            <button class="list-buttons" onclick="selected_seats('seat_5')" id="seat_5"
+                style='margin-right:18px'>5</button>
+            <button class="list-buttons" onclick="selected_seats('seat_6')" id="seat_6"
+                style='margin-right:18px'>6</button>
+            <button class="list-buttons" onclick="selected_seats('seat_7')" id="seat_7"
+                style='margin-right:18px'>7</button>
+            <button class="list-buttons" onclick="selected_seats('seat_8')" id="seat_8"
+                style='margin-right:18px'>8</button>
+            <button class="list-buttons" onclick="selected_seats('seat_9')" id="seat_9"
+                style='margin-right:18px'>9</button>
+            <button class="list-buttons" onclick="selected_seats('seat_10')" id="seat_10"
+                style='margin-right:18px'>10</button>
+
 
         </div>
-      
-     
-            <button class="select-seats" onclick="submit_seats()">Select Seats</button>
+        <button class="select-seats" onclick="submit_seats()">Select Seats</button>
 
-    
+
     </div>
     <div id="overlay"></div>
+
+    <script src="{{ url_for('static', filename='/JS/SeatSelecting.js') }}"></script>
+
 </body>
 
 </html>
