--- a/Backend/templates/adminPage.html
+++ b/Backend/templates/adminPage.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <base href="/">
-    <link rel="stylesheet" href="/CSS/adminPage.css">
+    <link rel="stylesheet" href="../static/CSS/adminPage.css">
     <title>Admin Page</title>
 </head>
 
@@ -24,7 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a>
-                <img src="Images/logo.png" alt="" width="100" height="40" class="d-inline-block align-text-top">
+                <img src="../static/Images/logo.png" alt="" width="100" height="40"
+                    class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +35,7 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item homePage">
-                        <a class="nav-link active" aria-current="page" href="adminPage.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href=" # ">Home</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -65,14 +66,7 @@
 
                 </ul>
             </div>
-            <div class="signin">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="../HTML/login.html">Sign In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="../HTML/registration.html">Sign Up</a>
-                </li>
-            </div>
+
         </div>
     </nav>
     <script>
@@ -157,7 +151,7 @@
           <button type="button" id="closebtn" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           
           </div>
-        <form action = "" method=="POST">
+        <form action = "/owner_upload" method = "POST">
         
         
         <div id="addTheaterContainer">
@@ -170,7 +164,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary modal-cancel-btn" data-bs-dismiss="modal">${cancelbtn}</button>
-          <button type="button" id="saveTheaterData" onclick="saveAddTheater()" class="btn btn-primary modal-saveChanges-btn">${saveChangesbtn}</button>
+          <button type="submit" id="saveTheaterData" onclick="saveAddTheater()" class="btn btn-primary modal-saveChanges-btn">${saveChangesbtn}</button>
         </div>
         </form>
       </div>
@@ -183,15 +177,10 @@
             var modal = new bootstrap.Modal(addTheaterModalWrap.querySelector('.modal'));
             modal.show();
         }
-
-
-
-
     </script>
 
-    <!-- <script src="./connection.js"></script>
-<script src="./database.js"></script> -->
-    <script src="../JS/adminPageScript.js">
+    <script src="{{ url_for('static', filename='/JS/adminPageScript.js') }}"></script>
+
 
     </script>
 </body>
