--- a/Backend/templates/adminlogin.html
+++ b/Backend/templates/adminlogin.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Login</title>
+    <title>Admin Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLogin.css')}}">
+
 
 
 </head>
@@ -22,9 +23,9 @@
                     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                         <div class="card" style="border-radius: 15px;">
                             <div class="card-body p-5 Register">
-                                <h2 class="text-uppercase text-center mb-5 text">User Login</h2>
+                                <h2 class="text-uppercase text-center mb-5 text">Admin Login</h2>
 
-                                <form method="POST" action="/login">
+                                <form method="POST" action="/Adminlogin">
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">User Name</label>
@@ -48,12 +49,12 @@
                                     </div> -->
 
                                     <div class="d-flex justify-content-center">
-                                        <button type="submit" id="click" href="/Backend/login"
+                                        <button type="submit" id="click" href="/Adminlogin"
                                             class="btn-block btn-lg gradient-custom-4 text-body registerbtn">Login </button>
                                     </div>
 
                                     <p class="text-center text-muted mt-5 mb-0 form-label">Not a member ? <a
-                                            href="/registration" class="fw-bold text-body"><u
+                                            href="/adminregistration" class="fw-bold text-body"><u
                                                 class="form-label">Register</u></a>
                                     </p>
 
