--- a/Backend/templates/BookNow.html
+++ b/Backend/templates/BookNow.html
@@ -86,7 +86,7 @@
             <img src="{{ url_for('static', filename='/Images/logo.png') }}" alt="" class="nav_logo">
             <!-- <div class="maintext">BookYourShow</div> -->
 
-             <div class="dropdown">
+             <!-- <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Select Cities
@@ -102,7 +102,7 @@
                     <li><a class="dropdown-item" href="#">Pune</a></li> 
 
                 </ul>
-            </div>
+            </div> -->
 
              <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
