--- a/Backend/templates/BookNowNew.html
+++ b/Backend/templates/BookNowNew.html
@@ -8,6 +8,9 @@
     <title>BookYourShow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/styles.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/adminPage.css') }}">
+
     <style>
         /* .col {
             /* background-color: rgb(131, 131, 131); 
@@ -53,16 +56,15 @@
 
         .timeslot {
             background-color: #00c09d;
-            width: 120px;
-            height: 40px;
+            width: 1550px;
+            height: 80px;
             color: white;
             padding: 5px;
             margin-top: 20px;
-            margin-left: 20px;
+            margin-left: -155px;
             font-size: 18px;
             border-radius: 7px;
             /* vertical-align: center; */
-            text-align: center;
             display: table-cell;
             display: inline-block;
             box-shadow: inset 0 0 0 1px;
@@ -80,26 +82,101 @@
         .body :hover {
             color: lavenderblush;
         }
+
+        .div1 {
+            width: 150px;
+            color: #00c09d;
+        }
+
+        .btnsubmit {
+            margin-left: 2%;
+        }
     </style>
 </head>
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <nav class="navbar navbar-dark bg-dark">
-        <!-- Navbar content -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <!-- <a class="navbar-brand">BookYourShow</a> -->
-
-            <!-- <marquee><img src="{{ url_for('static', filename='/Images/logo.png') }}" alt="" class="nav_logo" style="color: white;"></marquee> -->
-            <!-- <div class="maintext">BookYourShow</div> -->
-            <marquee><img src="{{ url_for('static', filename='/Images/logo.png') }}" class="nav_logo"></marquee>
+            <a>
+                <img src="../static/Images/logo.png" alt="" width="100" height="40"
+                    class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <h1 style="color: white; font-family: serif; margin-right: 700px;" class="Dashboard">Admin</h1>
 
         </div>
     </nav>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    <div class='heading'>
+        <marquee behavior="alternate" direction="left" scrollamount="15">
+            <h1>Book Your Show</h1>
+        </marquee>
+    </div>
+    <!------------------------------------------------------------------------------------------------------------>
+
+    <div class="container">
+        <div class="row1">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <div>
+                            <div>
+                                <div>
+                                    <div class="timeslot" style="font-size: 33px; position: absolute;">
+                                        Theater Name
+                                        <!-- {{ "&nbsp;"|safe*1 }} -->
+                                        Theater Id
+                                        <!-- {{ "&nbsp;"|safe*1 }} -->
+                                        Theater Location
+                                        <!-- {{ "&nbsp;"|safe*1 }} -->
+                                        TheaterCityName
+                                        <!-- {{ "&nbsp;"|safe*1 }} -->
+                                        TheaterShowTime
+                                        <!-- {{ "&nbsp;"|safe*1 }} -->
+                                        BookShow
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
-    <div class="table-responsive container" >
-        <table class="table table-borderless body" border="5" >
+                        {% for k in rows%}
+                        <div class="timeslot" style="font-size: 33px;">
+
+                            <span class="label label-success">{{ "&nbsp;"|safe*3 }} {{k[0]}} {{ "&nbsp;"|safe*13 }}
+                                {{k[1]}} {{
+                                "&nbsp;"|safe*7 }}
+                                {{k[2]}} {{ "&nbsp;"|safe*7 }} {{k[3]}} {{ "&nbsp;"|safe*7 }} {{k[4]}}
+
+
+                                <a href="/SeatBooking"><button type="submit"
+                                        class="btn btn-primary  btnsubmit">BookNow</button><br></a>
+                            </span><br><br>
+                        </div>
+                        {% endfor %}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------------------------------------------------------------------------>
+
+    <!-- 
+    <div class="table-responsive container">
+        <table class="table table-borderless body" border="5">
             <tbody>
                 <tr>
                     <td style="font-size: 23px;">
@@ -110,16 +187,19 @@
                         <span class="label label-success">{{k[0]}}</span><br><br>
 
                         {% endfor %}
+
                     </td>
 
 
                     <td style="font-size: 23px; ">
 
-                        <span class="label label-primary" style="font-weight: bold;">Theater Id</span><br>
-                        <!-- <span class="label label-success">{{rows[0][1]}}</span><br>
+                        <span class="label label-primary" style="font-weight: bold;">Theater Id</span><br> -->
+
+
+    <!-- <span class="label label-success">{{rows[0][1]}}</span><br>
                         <span class="label label-success">{{rows[1][1]}}</span> -->
 
-                        {% for k in rows%}
+    <!-- {% for k in rows%}
 
                         <span class="label label-success">{{k[1]}}</span><br><br>
 
@@ -130,11 +210,13 @@
 
                     <td style=" font-size: 23px;">
 
-                        <span class="label label-primary" style="font-weight: bold;">Theater Location</span><br>
-                        <!-- <span class="label label-success">{{rows[0][2]}}</span><br>
+                        <span class="label label-primary" style="font-weight: bold;">Theater Location</span><br> -->
+
+
+    <!-- <span class="label label-success">{{rows[0][2]}}</span><br>
                         <span class="label label-success">{{rows[1][2]}}</span> -->
 
-                        {% for k in rows%}
+    <!-- {% for k in rows%}
 
                         <span class="label label-success">{{k[2]}}</span><br><br>
 
@@ -144,11 +226,14 @@
 
                     <td style=" font-size: 23px;">
 
-                        <span class="label label-primary" style="font-weight: bold;">Theater City Name</span><br>
-                        <!-- <span class="label label-success">{{rows[0][3]}}</span><br>
+                        <span class="label label-primary" style="font-weight: bold;">Theater City Name</span><br> -->
+
+
+
+    <!-- <span class="label label-success">{{rows[0][3]}}</span><br>
                         <span class="label label-success">{{rows[1][3]}}</span> -->
 
-                        {% for k in rows%}
+    <!-- {% for k in rows%}
 
                         <span class="label label-success">{{k[3]}}</span><br><br>
 
@@ -159,10 +244,13 @@
 
                     <td style=" font-size: 23px;">
 
-                        <span class="label label-primary" style="font-weight: bold;">Theater Show Time</span><br>
-                        <!-- <span class="label label-success">{{rows[0][4]}}</span><br>
+                        <span class="label label-primary" style="font-weight: bold;">Theater Show Time</span><br> -->
+
+
+
+    <!-- <span class="label label-success">{{rows[0][4]}}</span><br>
                         <span class="label label-success">{{rows[1][4]}}</span> -->
-                        {% for k in rows%}
+    <!-- {% for k in rows%}
 
                         <span class="label label-success">{{k[4]}}</span><br><br>
 
@@ -170,6 +258,7 @@
                         {% endfor %}
 
                     </td>
+
 
                     <td style=" font-size: 23px;">
 
@@ -187,7 +276,7 @@
                 </tr>
 
             </tbody>
-        </table>
+        </table> -->
 
 </body>
 
