--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -22,7 +22,7 @@
             <img src="{{ url_for('static', filename='/Images/logo.png') }}" alt="" class="nav_logo">
             <div class="maintext">BookYourShow</div>
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+                <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Select Cities
                 </button>
@@ -33,10 +33,10 @@
                     <!-- <li>
                         <hr class="dropdown-divider">
                     </li> -->
-                    <li><a class="dropdown-item" href="#">Bangalore</a></li>
+                    <!--<li><a class="dropdown-item" href="#">Bangalore</a></li>
                     <li><a class="dropdown-item" href="#">Pune</a></li>
 
-                </ul>
+                </ul> -->
             </div>
 
             <form class="d-flex">
@@ -44,7 +44,7 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
-            <a href="/login"><button type="button" class="btn btn-light  signin">Log In</button></a>
+            <!-- <a href="/login"><button type="button" class="btn btn-light  signin">Log In</button></a> -->
         </div>
     </nav>
 
