--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -33,7 +33,7 @@
                     <!-- <li>
                         <hr class="dropdown-divider">
                     </li> -->
-                    <!--<li><a class="dropdown-item" href="#">Bangalore</a></li>
+                <!--<li><a class="dropdown-item" href="#">Bangalore</a></li>
                     <li><a class="dropdown-item" href="#">Pune</a></li>
 
                 </ul> -->
@@ -49,6 +49,7 @@
     </nav>
 
     <!--header-->
+    
     <div class="banner">
         <div class="banner_contents">
             <h1 class="banner_title">IPL 2022 Is Live</h1>
@@ -70,31 +71,33 @@
             <!--rec_movie_1-->
             {%for j,i in enumerate(result)%}
 
-            <img onclick="window.location.href= '/rec_movie_1' " alt="" class="row_poster row_posterLarge"
-                src="static/uploading/{{j+num}}.jpg">
+            <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-2"
+                src="static/uploading/{{j+num}}.jpg"></a>
+
+            {%endfor%}
             <!-- <button class="btn btn-light  Book_Now_Button">Book Now</button> -->
 
             <!-- rec_movie_2
             <img onclick="window.location.href='/rec_movie_2' " alt="" class="row_poster row_posterLarge"
                 src="">
 
-            <!--rec_movie_3
+            rec_movie_3
             <img onclick="window.location.href='/rec_movie_3' " alt="" class="row_poster row_posterLarge"
                 src="">
 
-            <!--rec_movie_4
+            rec_movie_4
             <img onclick="window.location.href='/rec_movie_4' " alt="" class="row_poster row_posterLarge"
                 src="">
 
-            <!--rec_movie_5
+            rec_movie_5
             <img onclick="window.location.href='/rec_movie_5' " alt="" class="row_poster row_posterLarge"
                 src="">
 
-            <!--rec_movie_6
+            rec_movie_6
             <img onclick="window.location.href='/rec_movie_6' " alt="" class="row_poster row_posterLarge"
                 src="">
 
-            <!--rec_movie_7
+            rec_movie_7
             <img onclick="window.location.href='/rec_movie_7' " alt="" class="row_poster row_posterLarge"
                 src=""> -->
 
@@ -107,7 +110,7 @@
             <img src="/Images/img7.jpg" alt="" class="row_poster row_posterLarge"> -->
         </div>
     </div>
-    {%endfor%} 
+    
 
     <!--Trending Now-->
     <div class="row">
